# gabriel_martins_ribeiro_embarcatech_HBr_2025

./: .gitignore  README.md
BR Smart Guia/codigos/: ssd1306.h  ssd1306_i2c.h
pico_temp/: adc.c  test_adc
projects/BR Smart Guia/: README.md
projects/BR Smart Guia/docs/Modulos/: botao.md  buzzer.md  matriz.md  oled.md  pb.md  rasp.md  ultrassonico.md
projects/BR Smart Guia/docs/Produto/: index.md
projects/BR Smart Guia/docs/Referencias/: ref.md
projects/BR Smart Guia/src/: BatGuia.c  CMakeLists.txt  ssd1306_i2c.c
projects/Code_structuring_modular_architecture/: CMakeLists.txt
projects/Code_structuring_modular_architecture/app/: main.c
projects/Code_structuring_modular_architecture/drivers/: led_embutido.c
projects/Code_structuring_modular_architecture/hal/: hal_led.c
projects/Code_structuring_modular_architecture/include/: hal_led.h  led_embutido.h
projects/adc_temp_test/: CMakeLists.txt
projects/adc_temp_test/include/: adc_temp.h
projects/adc_temp_test/src/: adc_temp.c  main.c
projects/adc_temp_test/test/: test_adc_temp.c
projects/countdown_display/: README.md
projects/countdown_display/src/: CMakeLists.txt  main.c  ssd1306.c  ssd1306.h
projects/internal_temp_monitor/: README.md  font.c  font.h
projects/internal_temp_monitor/src/: CMakeLists.txt  main.c
projects/joystick_read/: CMakeLists.txt  README.md  font.h  main.c
projects/pico_temp/: adc.h  test_adc.c
projects/teste_unitario/teste_unitario/: CMakeLists.txt  main.c
projects/unitary_test/unitary_test/: CMakeLists.txt  main.c
